# Dr.V

./: .gitignore  README.md  cognitive.py  perceptive.py  preprocessing.py  pyproject.toml  reasoning.py  temporal.py  textual.py
drv_agent/: __init__.py  cli.py  config.py  pipeline.py  prompting.py  runner_utils.py  runtime.py  schemas.py  video.py
drv_agent/adapters/: __init__.py  base.py  cognitive.py  llm.py  mock.py  perceptive.py  temporal.py
drv_agent/tests/: test_mock_pipeline.py  test_runner_utils.py
examples/: real_config.example.toml  request.example.json
scripts/: cgstvg_runner.py  internvl2_caption_runner.py  qwen2vl_caption_runner.py
